--- a/css/style.css
+++ b/css/style.css
@@ -455,6 +455,10 @@ h5 span, h6 span {
     h1 {
         font-size: 50px;
     }
+    .nosotros h2 {
+        padding: 0;
+        padding-bottom: 70px;
+    }
 }
 
 @media screen and (max-width: 450px){
