--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,11 +1,3 @@
-/*
-Para cambiar a la vercion Dark estos elementos cambiaran con Js
-
-Body = Cambiar clase a .Dark
-.icomenu = cambiar la clase .icomenudark
-.contenlight = cambiar la clase .contendark
-*/
-
 body {
     margin: 0;
     min-width: 350px;
@@ -15,14 +7,14 @@ body {
 }
 
 /*Inicio light/dark*/
-.dark {
-    background-color: #1e1e2f;
-    color: white;
-}
-
 .light {
     background-color: #f5f6fa;
     color: #1e1e2f;
+}
+
+.dark {
+    background-color: #1e1e2f;
+    color: white;
 }
 
 .icomenu {
@@ -40,6 +32,7 @@ body {
 .contendark {
     background-color: #27293d;
 }
+
 /*Final light/dark*/
 
 /*Inicio Generales*/
@@ -57,10 +50,12 @@ li {
     list-style: none;
 }
 
-.orden, .fordata {
+.orden,
+.fordata {
     display: inline-block;
     vertical-align: top;
 }
+
 /*Final Generales*/
 
 /*Inicio Cabecera*/
@@ -70,7 +65,7 @@ header {
     justify-content: space-between;
     max-height: 65px;
     padding: 7px 0;
-    padding-left:  40px;
+    padding-left: 40px;
 }
 
 header img {
@@ -89,6 +84,7 @@ section {
     padding-top: 20px;
     display: flex;
 }
+
 /*Fin de la seccion principal*/
 
 /*Inicio Navegacion izquierda*/
@@ -102,7 +98,8 @@ nav {
     transition: ease-in .3s;
 }
 
-nav, nav a {
+nav,
+nav a {
     color: white;
 }
 
@@ -115,7 +112,9 @@ nav a:hover {
     transition: ease-in .3s;
 }
 
-nav img, nav h2, nav p {
+nav img,
+nav h2,
+nav p {
     display: inline-block;
     vertical-align: middle;
 }
@@ -134,23 +133,28 @@ hr {
 .icomenumovil {
     display: none;
 }
+
 /*Fin Navegacion izquierda*/
 
 /*Inicio Contenido*/
-.contenlight, .contendark {
+.contenlight,
+.contendark {
     border-radius: 5px;
     padding: 15px;
 }
+
 article {
     display: flex;
 }
+
 .contendash {
     margin: 0 15px;
 }
 
 section {
-    min-height: 76vh;
+    min-height: 70vh;
 }
+
 /*Final Contenido*/
 
 /*Inicio Formulario de edicion del perfil*/
@@ -161,9 +165,11 @@ section {
 .fordata label {
     font-size: 14px;
     font-weight: 400;
+    margin-left: 15px;
 }
 
-.fordata input, textarea {
+.fordata input,
+textarea {
     background: rgba(0, 0, 0, 0.05);
     border: solid 1px #2b3553;
     border-radius: 5px;
@@ -192,6 +198,7 @@ button {
     color: #ffff;
     padding: 11px 40px;
 }
+
 /*Fin Formulario de edicion del perfil*/
 
 /*Inicio Trajeta usuario*/
@@ -209,6 +216,7 @@ button {
 .targetauser p {
     text-align: justify;
 }
+
 /*Inicio Trajeta usuario*/
 
 /*Inicio Footer*/
@@ -222,48 +230,55 @@ footer {
 footer img {
     width: 100px;
 }
+
 /*Fin Footer*/
 
-@media screen and (max-width: 1400px){
+@media screen and (max-width: 1400px) {
     .fordata input {
         width: 80%;
     }
 }
 
-@media screen and (max-width: 950px){
+@media screen and (max-width: 950px) {
     nav {
         left: -300px;
         position: absolute;
         top: 65px;
         width: 250px;
     }
+
     .icomenumovil {
         display: initial;
     }
 }
 
-@media screen and (max-width: 750px){
+@media screen and (max-width: 750px) {
     .fordata {
         display: inline;
     }
 }
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 650px) {
     header {
         padding-left: 0;
     }
+
     .targetauser {
         width: 100%;
     }
+
     .fordata input {
         width: 90%;
     }
+
     article {
         display: block;
     }
+
     section {
         padding-top: 0;
     }
+
     .contendark {
         margin-top: 20px;
     }
