--- a/src/assets/css/styleinicial.css
+++ b/src/assets/css/styleinicial.css
@@ -1,6 +1,6 @@
 body {
     color: #353752;
-    font-family: 'DM Serif Display', serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     min-width: 300px;
     text-align: center;
@@ -30,7 +30,7 @@ button:hover {
 
 .menu img {
     left: 0;
-    max-width: 200px;
+    max-width: 150px;
 }
 
 nav li {
